1. added start / stop bits 2. use little endian encoding 3. pad binary strings with 0's 4. removed spectrograph 5. made text box larger

--- a/index.html
+++ b/index.html
@@ -9,15 +9,12 @@
 </head>
 
 <body>
-    <form>
-        <input type="text" id="text">
+    <textarea form="myform" id="text" name="text" cols="40" rows="30">hi</textarea>
+    <form id="myform">
         <input type="button" id="send" value="Send">
     </form>
-    <p>System Output</p>
-    <canvas id="spectrogramTx" width="800" height="256" style="display: block; background-color: black ;"></canvas>
-    <p>Mic Input</p>
-    <canvas id="spectrogramRx" width="800" height="256" style="display: block; background-color: black ;"></canvas>
-    <div id="received">Mic Input</div>
+    <canvas id="spectrogramTx"</canvas>
+    <canvas id="spectrogramRx"</canvas>
 
 </body>
 <script>
@@ -28,7 +25,8 @@ $( document ).ready(function() {
     $("#send").on("click",function(){
         var t = $( "#text" ).val();
         //m2.QFSK(t,150,3000,150);
-        m2.BASK(t,100,11000);
+        m2.BFSK(t,3, 1700,300);
+        //m2.BASK(t,100,11000);
         //m2.BASK(t,100,11000);
         //m2.BASK(t,100,16000);
     })
